--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -1,7 +1,7 @@
             <div class="top-menu">
               <p>
                 <span class="left">
-                  <a href="#"><i class="fa fa-map-marker"></i>Chennai India</a>
+                  <a href="#"><i class="fa fa-map-marker"></i>Chennai, India</a>
                   <a href="#"><i class="fa fa-mobile-phone"></i>+91 8870932544</a>
                   <a href="#"><i class="fa fa-envelope"></i>rameshshann@gmail.com</a>
               	</span>
